--- a/third-app/package.json
+++ b/third-app/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.0",
+    "react-bootstrap-table-next": "^3.3.5",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0"
   },
