--- a/third-app/package.json
+++ b/third-app/package.json
@@ -6,11 +6,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.4.1",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-bootstrap-table-next": "^3.3.5",
+    "react-datepicker": "^2.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-moment": "^0.9.7",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0",
+    "reactstrap": "^8.4.1",
+    "underscore": "^1.9.2"
   },
   "scripts": {
     "start": "react-scripts start",
