--- a/third-app/package.json
+++ b/third-app/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "reactstrap": "^8.4.1",
-    "underscore": "^1.9.2"
+    "underscore": "^1.9.2",
+    "url-pattern": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
